IE11 text wrapping fix

--- a/app/sass/merits.sass
+++ b/app/sass/merits.sass
@@ -43,6 +43,7 @@ $text_orange: #d94948
 .merits_top_subtitle
 	font-size: 20pt
 	color: $text_orange
+	white-space: pre-wrap
 
 .merits_box
 	width: 75%
