--- a/app/sass/pricing_headers.sass
+++ b/app/sass/pricing_headers.sass
@@ -32,12 +32,14 @@ $text_gray: #616161
 	padding-bottom: 16px
 	font-size: 20pt
 	color: $text_red
+	white-space: pre-wrap
 
 .pricing_subtitle_accent
 	ppadding-top: 4px
 	padding-bottom: 16px
 	font-size: 20pt
 	color: $text_gray
+	white-space: pre-wrap
 
 @media(max-width: 420px)
 	.pricing_title
