--- a/app/sass/tweets.sass
+++ b/app/sass/tweets.sass
@@ -39,6 +39,7 @@ $background: #eb4f4e
 	font-family: 'bariol-italic'
 	text-align: start
 	color: black
+	white-space: pre-wrap
 
 @media(max-width: 420px)
 	.tweets_title
